
[TestScrollProp/should_populate_scrollProps_with_pagination_metadata_on_full_request - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": 1,
   "nextPage": 2,
   "pageName": "page",
   "previousPage": null
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_add_to_mergeProps_when_scroll_merge_intent_is_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_use_custom_wrapper_path_when_WithWrapper_is_set - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.items"
 ],
 "props": {
  "users": {
   "items": [
    "one"
   ],
   "meta": {
    "total": 1
   }
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_add_to_prependProps_when_scroll_merge_intent_is_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestScrollProp/should_resolve_value_from_lazy_source_when_prop_value_is_lazy - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "users.data"
 ],
 "props": {
  "users": {
   "data": [
    "lazy-one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---
